Implemented go back and transaction view initialized

--- a/Src/WebClientApp/WebClient/src/app/views/transaction/transaction-create/transaction-create.component.html
+++ b/Src/WebClientApp/WebClient/src/app/views/transaction/transaction-create/transaction-create.component.html
@@ -2,7 +2,7 @@
     <div>
         <i
             class="bi bi-arrow-left-circle pointer"
-            [routerLink]="['/transaction']"
+			appGoPageBack
             style="cursor: pointer"
         ></i>
         &nbsp;&nbsp;
