--- a/Src/WebClientApp/WebClient/src/app/views/transaction/transaction-view/transaction-view.component.html
+++ b/Src/WebClientApp/WebClient/src/app/views/transaction/transaction-view/transaction-view.component.html
@@ -1,1 +1,23 @@
-<p>transaction-view works!</p>
+<div class="component-header">
+    <div>
+        <i
+            class="bi bi-arrow-left-circle pointer"
+			appGoPageBack
+            style="cursor: pointer"
+        ></i>
+        &nbsp;&nbsp;
+        <span>{{ this.transactionService.selectedTransaction.name }}</span>
+    </div>
+</div>
+
+<div class="mainChild">
+	<h5>Transactions</h5>
+
+    <div class="list-container">
+		sss
+    </div>
+</div>
+
+<div class="bottom-button">
+    <!-- <button class="default-button" (click)="editWallet()">Edit Wallet</button> -->
+</div>
