--- a/Src/WebClientApp/WebClient/src/app/views/wallet/wallet-create/wallet-create.component.html
+++ b/Src/WebClientApp/WebClient/src/app/views/wallet/wallet-create/wallet-create.component.html
@@ -1,6 +1,10 @@
 <div class="component-header">
     <div>
-        <i class="bi bi-arrow-left-circle pointer" [routerLink]="['/wallet']" style="cursor: pointer;"></i>
+        <i
+            class="bi bi-arrow-left-circle pointer"
+            appGoPageBack
+            style="cursor: pointer"
+        ></i>
         &nbsp;&nbsp;
         <span>New Wallet</span>
     </div>
@@ -9,26 +13,24 @@
 <br />
 
 <div class="childMainPage">
-	<div>
-		<input
-			class="default-input primary"
-			type="text"
-			[(ngModel)]="this.walletService.newWallet.name"
-			placeholder="Wallet Name"
-		/>
-	</div>
-	<div>
-		<input
-			class="default-input primary"
-			type="text"
-			[(ngModel)]="this.walletService.newWallet.currencyCode"
-			placeholder="Wallet Currency Code"
-		/>
-	</div>
+    <div>
+        <input
+            class="default-input primary"
+            type="text"
+            [(ngModel)]="this.walletService.newWallet.name"
+            placeholder="Wallet Name"
+        />
+    </div>
+    <div>
+        <input
+            class="default-input primary"
+            type="text"
+            [(ngModel)]="this.walletService.newWallet.currencyCode"
+            placeholder="Wallet Currency Code"
+        />
+    </div>
 </div>
 
 <div class="row bottom-button">
-    <button class="default-button" (click)="addWallet()">
-        Create Wallet
-    </button>
+    <button class="default-button" (click)="addWallet()">Create Wallet</button>
 </div>
