--- a/Src/WebClientApp/WebClient/src/app/views/wallet/wallet-view/wallet-view.component.html
+++ b/Src/WebClientApp/WebClient/src/app/views/wallet/wallet-view/wallet-view.component.html
@@ -2,7 +2,7 @@
     <div>
         <i
             class="bi bi-arrow-left-circle pointer"
-            [routerLink]="['/wallet']"
+            appGoPageBack
             style="cursor: pointer"
         ></i>
         &nbsp;&nbsp;
